# ocf-engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
assets/shaders/: basic.vert  cube.frag  cube.frag.spv  cube.vert  cube.vert.spv  texture.frag  texture.frag.spv  texture.vert  texture.vert.spv  triangle.vert  triangle.vert.spv
cmake/: Dependencies.cmake
docs/: rhi.md  vulkan.md
engine/: CMakeLists.txt
engine/include/ocf/: Application.h  Camera.h  CameraComponent.h  Component.h  Engine.h  FileUtils.h  IndexBuffer.h  Node.h  OpenGLUtility.h  Program.h  RenderCommand.h  RenderQueue.h  Renderer.h  RendererEnums.h  Scene.h  Sprite.h  Texture.h  Transform.h  Types.h  VertexArrayObject.h  VertexBuffer.h  Window.h
engine/include/ocf/core/: Allocator.h  Engine.h  Logger.h  Object.h  Result.h
engine/include/ocf/math/: MaxRectsBinPack.h  Rect.h  RectBinPack.h  constants.h  geometric.h  mat2.h  mat3.h  mat4.h  matrix_transform.h  qualifie.h  quat.h  vec2.h  vec3.h  vec4.h
engine/include/ocf/platform/: Application.h  FileSystem.h  Window.h  platform.h
engine/include/ocf/renderer/: IndexBuffer.h  Material.h  MaterialEnums.h  MaterialInstance.h  Renderer.h  Texture.h  TextureSampler.h  VertexBuffer.h
engine/include/ocf/rhi/: BufferDescriptor.h  CommandBuffer.h  Context.h  Device.h  DeviceFactory.h  Handle.h  PipelineState.h  PixelBufferDescriptor.h  RHIDevice.h  RHIEnums.h  Swapchain.h
engine/include/ocf/scene/: Component.h  Node.h  Scene.h
engine/src/: Application.cpp  Camera.cpp  CameraComponent.cpp  Component.cpp  Engine.cpp  FileUtils.cpp  IndexBuffer.cpp  Node.cpp  OpenGLUtility.cpp  Program.cpp  RenderQueue.cpp  Renderer.cpp  Scene.cpp  Sprite.cpp  Texture.cpp  Transform.cpp  VertexArrayObject.cpp  VertexBuffer.cpp  Window.cpp
engine/src/core/: Allocator.cpp  Engine.cpp  Logger.cpp  Object.cpp
engine/src/math/: MaxRectsBinPack.cpp  Rect.cpp
engine/src/platform/: Application.cpp  FileSystem.cpp  GLFWWindow.cpp  GLFWWindow.h  Window.cpp
engine/src/renderer/: DescriptorSet.cpp  DescriptorSet.h  DescriptorSetLayout.cpp  DescriptorSetLayout.h  IndexBuffer.cpp  Material.cpp  MaterialInstance.cpp  Renderer.cpp  Texture.cpp  VertexBuffer.cpp
engine/src/rhi/: Device.cpp  DeviceFactory.cpp  HandleAllocator.cpp  HandleAllocator.h
engine/src/rhi/vulkan/: VulkanBuffer.cpp  VulkanBuffer.h  VulkanCommandBuffer.cpp  VulkanCommandBuffer.h  VulkanContext.cpp  VulkanContext.h  VulkanDevice.cpp  VulkanDevice.h  VulkanDeviceFactory.cpp  VulkanDeviceFactory.h  VulkanHandles.cpp  VulkanHandles.h  VulkanPipelineBuilder.cpp  VulkanPipelineBuilder.h  VulkanPlatform.cpp  VulkanPlatform.h  VulkanSwapchain.cpp  VulkanSwapchain.h  VulkanUtility.cpp  VulkanUtility.h
engine/src/rhi/vulkan/platform/: VulkanPlatformLinux.cpp  VulkanPlatformLinux.h  VulkanPlatformWindows.cpp  VulkanPlatformWindows.h
engine/src/rhi/vulkan/resource/: GpuResourceBase.h  ImageResource.cpp  ImageResource.h  ResourceUploader.cpp  ResourceUploader.h  Sampler.cpp  Sampler.h  SamplerCache.cpp  SamplerCache.h
engine/src/scene/: Component.cpp  Node.cpp  Scene.cpp
engine/test/: CMakeLists.txt  test_geometric.cpp  test_main.cpp  test_mat2.cpp  test_mat3.cpp  test_mat4.cpp  test_matrix_transform.cpp  test_quat.cpp  test_rect.cpp  test_result.cpp  test_texture_sampler.cpp  test_vec.cpp
sandbox/: CMakeLists.txt  main.cpp
scripts/: add_spdx_header.py
src/: CMakeLists.txt  main.cpp  ocf-engine.cpp  ocf-engine.h
tests/: CMakeLists.txt
tests/sandbox/: CMakeLists.txt  main.cpp
